--- a/src/BasePage.css
+++ b/src/BasePage.css
@@ -1,20 +1,10 @@
-html {
-    box-sizing: border-box;
-    font-family: 'Amaranth', serif;
-}
 
-*, *::before, *::after {
-    box-sizing: inherit;
-    padding: 0;
-    margin: 0;
-}
 
 .BasePage {
-    margin: 0 auto;
-    width: 100%;
-    font-family: 'Amaranth', serif;
-    padding: 0;
-    font-size: 1.3em;
-    background-color: #e8e8e8;
+    background-color:#e8e8e8;
+    width:100%;
+    padding:0 0 0px 0;
+    margin:auto;
+    overflow: hidden;
 }
 
